# CryptoPals-CPP

./: .gitignore  Makefile  README.md
CryptoPals/: BreakRepeatingXOR  CMakeLists.txt  DetectSingleCharXOR  Dev  HexBase64  Makefile  ReadMe.md  RepeatingKeyXOR  SingleByteXOR  XORED  main.cpp
CryptoPals/Challenge1/BreakRepeatingXOR/: LanguageChecker.cpp  LanguageChecker.h  ReadMe.md  XORBreaker.cpp  XORBreaker.h  main.cpp
CryptoPals/Challenge1/DetectSingleCharXOR/: Converter.cpp  Converter.h  ReadMe.md  main.cpp
CryptoPals/Challenge1/FixedXOR/: Converter.cpp  Converter.h  ReadMe.md  main.cpp
CryptoPals/Challenge1/HexBase64/: HexBase64.cpp  HexBase64.h  ReadMe.md  Scratch.cpp  main.cpp
CryptoPals/Challenge1/RepeatingKeyXOR/: Encrypter.cpp  Encrypter.h  Readme.md  main.cpp
CryptoPals/Challenge1/SingleByteXOR/: Converter.cpp  Converter.h  ReadMe.md  main.cpp
CryptoPals/CryptoDocumentation/Notes/: HammingDistance.md
Tests/: HexByteBase.cpp
